remaining last logic scneario & media query/responsive design

--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
       </section>
       <section class="right">
         <p class="message"> ⏲  Start guessing...</p>
-        <Attempts: class="label-score">
+        <p class="label-score">
        🎯   Attempts: <span class="attempts">0</span></p>
        <p class="label-score">#️⃣  Score: <span class="score">20</span></p>
         <p class="label-highscore">
           🏆  Highscore: <span class="highscore">0</span>
         </p>
-          <button class="btn again">🔀  Again!</button>
+         <button class="btn again">🔀  Again!</button>
+
       </section>
     </main>
     <script src="script.js"></script>
