remaining last logic scneario & media query/responsive design

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <h1>Guess Moss's Number!</h1>
-      <p class="between">Moss Picked a random number between 1 &amp; 20, <br>try go guess the right number. <br>You have 5 attempts! Go</p>
+      <p class="between">Moss picked a random number between 1 &amp; 20, <br>try guessing the right number with the least attempts. <br>You have 5 attempts, Go!</p>
       
       <div class="number">?</div>
     </header>
